# python-jupyterlab-example-notebook-in-devcontainer

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
.jupyter/: jupyter_notebook_config.py
jupyter_example_notebook/: hello_world.ipynb
